--- a/package.json
+++ b/package.json
@@ -1,26 +1,23 @@
 {
-  "name": "javascript_interview_practice",
+  "name": "noname",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --hot",
-    "build": "webpack"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/revlanc/javascript_interview_practice.git"
+    "dev": "webpack-dev-server --hot --open",
+    "start": "node app.js",
+    "build": "webpack --config webpack.config.prod.js",
+    "dev-build": "NODE_ENV=dev webpack --config webpack.config.prod.js",
+    "test": "exit"
   },
   "author": "Allen",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/revlanc/javascript_interview_practice/issues"
-  },
-  "homepage": "https://github.com/revlanc/javascript_interview_practice#readme",
   "dependencies": {
     "@babel/runtime": "^7.5.5",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.10.2",
+    "react-dom": "npm:@hot-loader/react-dom",
+    "react-hot-loader": "^4.12.14",
+    "react-router-dom": "^5.1.0",
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
@@ -30,10 +27,18 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.2.0",
+    "eslint": "^6.5.0",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-react": "^7.14.3",
     "html-webpack-plugin": "^3.2.0",
-    "react-hot-loader": "^4.12.10",
-    "webpack": "^4.39.1",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2"
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
+    "url-loader": "^2.1.0",
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.1"
   }
 }
